# agentic-deep-researcher

./: .env.example  LICENSE  README.md  app.py  optimized_research.py  pyproject.toml  requirements.txt  server.py
