[project]
name = "agentic_deep_researcher"
version = "0.1.0"
description = "Deep Research Agent using LinkUp API and optimized Ollama integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linkup-sdk>=0.2.4",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]
